@@ -9,11 +9,15 @@ Fixed a bug where giving a coordinate name before a parenthesized point
 caused a syntax error.  Thanks to Kees Zeelenberg for spotting this.
 
 Added an srand function to seed the random number generator, though
-there's none documented in Kernighan and Bentley's grap.  W. Robert
-Daasc caught this omission.
+there's none documented in Kernighan and Bentley's grap, and a getpid
+function to get a (sort of) random number.  Don't use this for key
+generation.  W. Robert Daasc caught this omission.
 
 While I was in there, I discovered that rand was not returning its
 full range from [0-1).  It does now.
+
+Some keywords that accept strings weren't accepting sprintf, some of
+them have been fixed.
 
 1.20: The big jump reflects both internal changes and visible feature
 changes.  The class structure in the code has been substantially
